Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -258,7 +258,23 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LogisticRegression(C=1000000000000.0, class_weight=None, dual=False,\n",
+      "          fit_intercept=False, intercept_scaling=1, max_iter=100,\n",
+      "          multi_class='warn', n_jobs=None, penalty='l2', random_state=None,\n",
+      "          solver='lbfgs', tol=0.0001, verbose=0, warm_start=False)\n",
+      "AUC for None: 0.4811847047498608\n",
+      "LogisticRegression(C=1000000000000.0, class_weight='balanced', dual=False,\n",
+      "          fit_intercept=False, intercept_scaling=1, max_iter=100,\n",
+      "          multi_class='warn', n_jobs=None, penalty='l2', random_state=None,\n",
+      "          solver='lbfgs', tol=0.0001, verbose=0, warm_start=False)\n"
+     ]
+    }
+   ],
    "source": [
     "# Now let's compare a few different regularization performances on the dataset:\n",
     "weights = [None, 'balanced', {1:2, 0:1}, {1:10, 0:1}, {1:100, 0:1}, {1:1000, 0:1}]\n",
