Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -277,7 +277,17 @@
       "          fit_intercept=False, intercept_scaling=1, max_iter=100,\n",
       "          multi_class='warn', n_jobs=None, penalty='l2', random_state=None,\n",
       "          solver='lbfgs', tol=0.0001, verbose=0, warm_start=False)\n",
-      "AUC for 2 to 1: 0.5602686365738339\n"
+      "AUC for 2 to 1: 0.5602686365738339\n",
+      "LogisticRegression(C=1000000000000.0, class_weight={1: 10, 0: 1}, dual=False,\n",
+      "          fit_intercept=False, intercept_scaling=1, max_iter=100,\n",
+      "          multi_class='warn', n_jobs=None, penalty='l2', random_state=None,\n",
+      "          solver='lbfgs', tol=0.0001, verbose=0, warm_start=False)\n",
+      "AUC for 10 to 1: 0.6415556195203895\n",
+      "LogisticRegression(C=1000000000000.0, class_weight={1: 100, 0: 1}, dual=False,\n",
+      "          fit_intercept=False, intercept_scaling=1, max_iter=100,\n",
+      "          multi_class='warn', n_jobs=None, penalty='l2', random_state=None,\n",
+      "          solver='lbfgs', tol=0.0001, verbose=0, warm_start=False)\n",
+      "AUC for 100 to 1: 0.7484994479100802\n"
      ]
     }
    ],
